--- a/Starter_Code/part_2_mars_weather.ipynb
+++ b/Starter_Code/part_2_mars_weather.ipynb
@@ -17472,11 +17472,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'month_numb': 1, 'avg_min_temp': -77.0}, {'month_numb': 2, 'avg_min_temp': -80.0}, {'month_numb': 3, 'avg_min_temp': -83.0}, {'month_numb': 4, 'avg_min_temp': -83.0}, {'month_numb': 5, 'avg_min_temp': -79.0}, {'month_numb': 6, 'avg_min_temp': -75.0}, {'month_numb': 7, 'avg_min_temp': -72.0}, {'month_numb': 8, 'avg_min_temp': -68.0}, {'month_numb': 9, 'avg_min_temp': -69.0}, {'month_numb': 10, 'avg_min_temp': -72.0}, {'month_numb': 11, 'avg_min_temp': -72.0}, {'month_numb': 12, 'avg_min_temp': -74.0}]\n",
+      "   month_numb  avg_min_temp\n",
+      "2           3         -83.0\n",
+      "3           4         -83.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Identify the coldest and hottest months in Curiosity's location\n"
+    "# Identify the coldest and hottest months in Curiosity's location\n",
+    "\n",
+    "\n",
+    "avg_min_temp = []\n",
+    "\n",
+    "for i in range(1, numbers_of_months + 1):\n",
+    "    weather_per_month = {\"month_numb\": \"\", \"avg_min_temp\": \"\"}\n",
+    "    avg_min_temp_month = df.loc[df['month'] == i]['min_temp'].mean()\n",
+    "    round_avg_min_temp_month = round(avg_min_temp_month, 0)\n",
+    "    weather_per_month[\"month_numb\"] = i\n",
+    "    weather_per_month[\"avg_min_temp\"] = round_avg_min_temp_month\n",
+    "    avg_min_temp.append(weather_per_month)\n",
+    "\n",
+    "print(avg_min_temp)\n",
+    "\n",
+    "df_month_temp = pd.DataFrame(avg_min_temp)\n",
+    "min_avg_temp = df_month_temp['avg_min_temp'].min()\n",
+    "month_min_temp = df_month_temp.loc[df_month_temp['avg_min_temp'] == min_avg_temp]\n",
+    "\n",
+    "print(month_min_temp)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   month_numb  avg_min_temp\n",
+      "7           8         -68.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hottest month\n",
+    "\n",
+    "min_avg_temp = df_month_temp['avg_min_temp'].max()\n",
+    "month_min_temp = df_month_temp.loc[df_month_temp['avg_min_temp'] == min_avg_temp]\n",
+    "\n",
+    "print(month_min_temp)"
    ]
   },
   {
